[workspace]
members = ["crates/fuizu", "crates/fuizu-protocol", "crates/fuizu-server", "crates/nats-util"]

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
absolute_paths_not_starting_with_crate = "warn"
explicit_outlives_requirements = "warn"
missing_copy_implementations = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
unsafe_code = "warn"

[workspace.lints.clippy]
#
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
#
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
#
large_digit_groups = "warn"
large_stack_frames = "warn"
large_types_passed_by_value = "warn"
#
manual_clamp = "warn"
manual_string_new = "warn"
manual_assert = "warn"
#
missing_const_for_fn = "warn"
missing_panics_doc = "warn"
#
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
redundant_pub_crate = "allow"
redundant_type_annotations = "warn"
#
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
needless_raw_strings = "warn"
#
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_wraps = "warn"
#
string_lit_as_bytes = "warn"
string_to_string = "warn"
transmute_ptr_to_ptr = "warn"
transmute_undefined_repr = "warn"
#
unreadable_literal = "allow"
tabs_in_doc_comments = "allow"
field_reassign_with_default = "allow"
as_ptr_cast_mut = "warn"
as_underscore = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
cast_ptr_alignment = "warn"
checked_conversions = "warn"
decimal_literal_representation = "warn"
equatable_if_let = "warn"
ignored_unit_patterns = "warn"
impl_trait_in_params = "warn"
invalid_upcast_comparisons = "warn"
items_after_statements = "warn"
lossy_float_literal = "warn"
map_unwrap_or = "warn"
match_wildcard_for_single_variants = "warn"
must_use_candidate = "warn"
mutex_atomic = "warn"
no_effect_underscore_binding = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
partial_pub_fields = "warn"
print_stderr = "warn"
print_stdout = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
str_split_at_newline = "warn"
trait_duplication_in_bounds = "warn"
trivially_copy_pass_by_ref = "warn"
type_repetition_in_bounds = "warn"
undocumented_unsafe_blocks = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
use_self = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
use_debug = "warn"
multiple_unsafe_ops_per_block = "warn"
flat_map_option = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
todo = "warn"
unused_async = "warn"
wildcard_imports = "warn"
