[package]
name = "fuizu-server"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
nats-util = { path = "../nats-util" }

async-nats = { version = "0.40", default-features = false, features = [
    "server_2_10",
    "server_2_11",
    "aws-lc-rs",
] }

####### async/await

tokio = { version = "1.44", features = [
    "rt",
    "sync",
    "rt-multi-thread",
    "signal",
] }
futures-util = "0.3.30"

####### serde

serde_json = "1.0.116"

####### eara

fuizu-protocol = { path = "../fuizu-protocol" }

####### tracing

tracing = "0.1"
tracing-subscriber = "0.3"

####### twilight

twilight-model = "0.16"
twilight-http = "0.16"
twilight-gateway-queue = "0.16"

[lints]
workspace = true
