[package]
name = "fuizu"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", default-features = false, features = ["sync"] }
futures-util = "0.3.30"
tracing = "0.1"
thiserror = "2"

#
fuizu-protocol = { path = "../fuizu-protocol" }

# twilight
twilight-model = { version = "0.16", optional = true }
twilight-gateway-queue = { version = "0.16", optional = true, default-features = false }

# nats
serde_json = "1.0.116"
async-nats = "0.40"

[features]
twilight = ["twilight-gateway-queue", "twilight-model"]

[lints]
workspace = true
