[package]
name = "fuizu"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", default-features = false, features = ["sync"] }
futures-util = "0.3.30"
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

#
fuizu-protocol = { path = "../fuizu-protocol" }

# twilight
twilight-gateway-queue = { version = "0.16", optional = true, default-features = false }

# nats
serde_json = "1.0.116"
async-nats.git = "https://github.com/nats-io/nats.rs"

[features]
twilight = ["twilight-gateway-queue"]

[lints]
workspace = true
